[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/drawersketch30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.721569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 79.0
margin_right = 442.0
margin_bottom = 26.0
rect_scale = Vector2( 1.08621, 0.955651 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VBoxContainer" parent="ItemContainer"]
margin_right = 441.0
size_flags_horizontal = 3
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 697.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 13.14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Name_Label" type="Label" parent="HBoxContainer/Label"]
margin_right = 596.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
text = "Item Name"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="HBoxContainer/Label/Item_Name_Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.843137, 0.458824, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Count" type="Label" parent="HBoxContainer/Label"]
margin_left = 600.0
margin_right = 697.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Count"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="HBoxContainer/Label/Item_Count"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_right = 1.0
color = Color( 0.843137, 0.458824, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 701.0
margin_top = 22.0
margin_right = 1222.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.83

[node name="Button" type="TextureButton" parent="HBoxContainer"]
margin_left = 1226.0
margin_right = 1280.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label2" type="HBoxContainer" parent="."]
visible = false
margin_left = 411.0
margin_right = 808.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipment_Name_Label" type="Label" parent="Label2"]
margin_right = 316.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
text = "Equipment Name"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="Label2/Equipment_Name_Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.843137, 0.458824, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipment_Count" type="Label" parent="Label2"]
margin_left = 320.0
margin_right = 397.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Count"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="Label2/Equipment_Count"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_right = 2.0
color = Color( 0.843137, 0.458824, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentConainer" type="ScrollContainer" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = 411.0
margin_top = 29.0
margin_right = 808.0
margin_bottom = 29.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentList" type="VBoxContainer" parent="EquipmentConainer"]
margin_right = 397.0
size_flags_horizontal = 3
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
